Extend VariationParamsManager to support feature associations.

Previously, feature associations for variation parameters were not easy
to register in unit-tests. This CL extends VariationParamsManager to do
it automatically.

BUG=645447

Review-Url: https://codereview.chromium.org/2321273003
Cr-Commit-Position: refs/heads/master@{#436433}

Former-commit-id: ce21e97f5e7a87e3cef9459dd578279e24f553d8